# LLMWatch

./: .gitignore  README.md  docker-compose.yml  llmwatch.db  prometheus.yml  pyproject.toml  test_app.py  test_llmwatch.py
.github/workflows/: CI.yml
dashboards/: llmwatch.json
llmwatch/: __init__.py  bus.py  events.py  logger.py  metrics.py  middleware.py  prices.json  prompts.py  raw_results_producer.py  test_kafka.py
tests/: test_unit.py
