[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmwatch"
version = "0.2.0"
description = "Generic LLM observability middleware — track latency, cost, TTFT, and multi-agent metrics across any LLM provider with Prometheus and Grafana."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Adithi Varadarajan", email = "adithiv.iub@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
    "llm", "observability", "prometheus", "grafana",
    "openai", "anthropic", "groq", "mlops", "ai-infrastructure"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
groq = ["groq>=0.4.0"]
all = ["openai>=1.0.0", "anthropic>=0.20.0", "groq>=0.4.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/adithi2905/LLMWatch"
Repository = "https://github.com/adithi2905/LLMWatch"
Issues = "https://github.com/adithi2905/LLMWatch/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmwatch*"]

[tool.setuptools.package-data]
llmwatch = ["*.json"]